[tool.poetry]
name = "collapsible-test"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "collapsible_test"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
PyQt5 = "^5.15.6"
superqt = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
